[build-system]
requires = [
    "scikit-build-core",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "dlisio"
version = "1.0.3"
description = "Python library for working with the well log formats DLIS (RP66v1) and LIS79"
authors = [
    { name = "Equinor ASA" },
]
urls.homepage = "https://github.com/equinor/dlisio"
license = "LGPL-3.0"
requires-python = ">=3.10"
dependencies = ["numpy"]
readme = "../README.md"

[tool.scikit-build]
cmake.args = [
    # we can safely pass OSX_DEPLOYMENT_TARGET as it's ignored on
    # everything not OS X. We depend on C++11, which makes our minimum
    # supported OS X release 10.9
    '-DCMAKE_OSX_DEPLOYMENT_TARGET=10.9',
]

[tool.cibuildwheel]
before-all = [
    """curl                                                             \
        -L https://github.com/fmtlib/fmt/archive/refs/tags/7.1.3.tar.gz \
        -o fmt-7.1.3.tar.gz                                             \
    """,
    "tar xf fmt-7.1.3.tar.gz",
    """cmake                \
        -S fmt-7.1.3        \
        -B fmt-7.1.3/build  \
        -DFMT_TEST=OFF      \
        -DFMT_DOC=OFF       \
    """,
    """cmake                    \
        --build fmt-7.1.3/build \
        --target install        \
        --config Release        \
    """,
    """git clone https://github.com/equinor/layered-file-protocols.git""",
    """cmake                                    \
        -S layered-file-protocols               \
        -B layered-file-protocols/build         \
        -DCMAKE_POSITION_INDEPENDENT_CODE=ON    \
        -DLFP_FMT_HEADER_ONLY=ON                \
        -DBUILD_TESTING=OFF                     \
    """,
    """cmake                                    \
        --build layered-file-protocols/build    \
        --target install                        \
        --config Release                        \
    """,
    """curl                                                                 \
        -L https://github.com/mpark/variant/archive/refs/tags/v1.4.0.tar.gz \ 
        -o variant-1.4.0.tar.gz                                             \
    """,
    "tar xf variant-1.4.0.tar.gz",
    """cmake                    \
        -S variant-1.4.0        \
        -B variant-1.4.0/build  \
    """,
    """cmake                        \
        --build variant-1.4.0/build \
        --target install            \
        --config Release            \
    """,
]

before-build = [
    """cmake                                 \
        -S .                                 \
        -B build                             \
        -DCMAKE_BUILD_TYPE=Release           \
        -DCMAKE_POSITION_INDEPENDENT_CODE=ON \
        -DBUILD_TESTING=OFF                  \
        -DBUILD_PYTHON=OFF                   \
    """,
    """cmake             \
        --build build    \
        --parallel       \
        --target install \
        --config Release \
    """,
]

test-requires = "pytest"

test-command = [ "cd python", "pytest tests" ]
test-sources = [ "python/tests", "python/data", "python/pyproject.toml" ]


[tool.cibuildwheel.macos]

before-all = [
    """curl                                                             \
        -L https://github.com/fmtlib/fmt/archive/refs/tags/7.1.3.tar.gz \
        -o fmt-7.1.3.tar.gz                                             \
    """,
    "tar xf fmt-7.1.3.tar.gz",
    """cmake                \
        -S fmt-7.1.3        \
        -B fmt-7.1.3/build  \
        -DFMT_TEST=OFF      \
        -DFMT_DOC=OFF       \
    """,
    """sudo cmake                    \
        --build fmt-7.1.3/build \
        --target install        \
        --config Release        \
    """,
    """git clone https://github.com/equinor/layered-file-protocols.git""",
    """cmake                                    \
        -S layered-file-protocols               \
        -B layered-file-protocols/build         \
        -DCMAKE_POSITION_INDEPENDENT_CODE=ON    \
        -DLFP_FMT_HEADER_ONLY=ON                \
        -DBUILD_TESTING=OFF                     \
    """,
    """sudo cmake                                    \
        --build layered-file-protocols/build    \
        --target install                        \
        --config Release                        \
    """,
    """curl                                                                 \
        -L https://github.com/mpark/variant/archive/refs/tags/v1.4.0.tar.gz \
        -o variant-1.4.0.tar.gz                                             \
    """,
    "tar xf variant-1.4.0.tar.gz",
    """cmake                    \
        -S variant-1.4.0        \
        -B variant-1.4.0/build  \
    """,
    """sudo cmake                        \
        --build variant-1.4.0/build \
        --target install            \
        --config Release            \
    """,
]

before-build = [
    """cmake                                 \
        -S .                                 \
        -B build                             \
        -DCMAKE_BUILD_TYPE=Release           \
        -DCMAKE_POSITION_INDEPENDENT_CODE=ON \
        -DBUILD_TESTING=OFF                  \
        -DBUILD_PYTHON=OFF                   \
    """,
    """sudo cmake             \
        --build build    \
        --parallel       \
        --target install \
        --config Release \
    """,
]
